# optitrack_vrpn

./: CMakeLists.txt  README.md  main.cpp  optitrack.cpp  optitrack.h
vrpn_install/etc/: vrpn.cfg
vrpn_install/include/: vrpn_Configure.h
